Initial changes to build infrastructure

--- a/pipes-http.cabal
+++ b/pipes-http.cabal
@@ -39,7 +39,7 @@ library
                      HsOpenSSL,
                      pipes-zlib,
                      pipes-attoparsec,
-                     pipes-openssl,
+--                   pipes-openssl,
                      mtl,
                      transformers,
                      network,
